--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 SECRET_KEY='django-insecure-4h(4(tkle+h!x*81b(r9!!z4jous7ld3!nwfx7ra^w39!z2vls'
-DATABASE_NAME=kidsnotesss
+DATABASE_NAME=kidsnote
 DATABASE_USER=kids
 DATABASE_PASSWORD=kids!@34
 DATABASE_HOST=localhost
